modal for contact form confirmation responsive fixes & pp-text-image alignment improvement

--- a/portfolio2020/web/themes/WVBaseTheme/src/scss/custom/page-parts/_pp_text_image.scss
+++ b/portfolio2020/web/themes/WVBaseTheme/src/scss/custom/page-parts/_pp_text_image.scss
@@ -5,6 +5,16 @@
     margin-bottom: 5rem;
   }
 
+  .col-md-6 {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+
+    p:first-of-type {
+      flex: 1 1 auto;
+    }
+  }
+
   &-inner {
 
     .reverse & {
