--- a/portfolio2020/web/themes/WVBaseTheme/src/scss/custom/partials/_modal.scss
+++ b/portfolio2020/web/themes/WVBaseTheme/src/scss/custom/partials/_modal.scss
@@ -4,6 +4,15 @@
   padding: 0;
   border-radius: 0;
 
+  /* overriding the horrible, non-responsive modal code */
+  /* which makes me use !important, aaaaargh */
+  @media (max-width: 660px) {
+    width: calc(100% - 4rem) !important;
+    left: unset !important;
+    top: 200px !important;
+    margin: 0 2rem;
+  }
+
   &.ui-widget.ui-widget-content {
     border: 1px solid $primary;
   }
